2004-10-26  Ian Zimmerman  <itz@californiadigital.com>

	* libfreeipmi/src/Makefile.am, libfreeipmi/src/freeipmi.h,
	libfreeipmi/src/ipmi-pef-cmds.h, libfreeipmi/src/ipmi-pef-cmds.c:
	added first batch of low level PEF functions.

2004-10-25  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Additional file packaging changes based on
	recent changes to doc installation.

	* bmc-watchdog/bmc-watchdog.8.in: Modified for changes made by Ian
	to _get_port().
	
2004-10-25  Ian Zimmerman  <itz@californiadigital.com>

	* bmc-watchdog/src/bmc-watchdog.c (_get_port): probe for KCS
	IO port, don't use hardcoded default.

2004-10-25  A Balamurugan  <bala.a@californiadigital.com>

	* fish/src/ipmi-wrapper-sensor.c: now sensors normal output shows
	upper/lower critical threshold instead of normal min/max.

	* libfreeipmi/src/ipmi-sdr-record-types.[ch]: added new template
	tmpl_generic_device_locator_sensor_record.

2004-10-25  Ian Zimmerman  <itz@californiadigital.com>

	* configure.ac, Makefile.am: make it possible to disable fish building.

2004-10-24  Ian Zimmerman  <itz@californiadigital.com>

	* configure.ac: bump version number to 0.1.3.
	
	* ipmipower/Makefile.am, bmc-watchdog/Makefile.am, ipmiping/Makefile.am,
	rmcpping/Makefile.am: don't put configured manpages into distribution.

2004-10-19  Ian Zimmerman  <itz@californiadigital.com>

	* NEWS: insert a meaningless blurb to shut up lintian.

2004-10-16  Anand Babu  <ab@gnu.org.in>

	* libfreeipmi/src/fiid.h: fiid_template_t and fiid_tmpl_t are now
	constants.

	* ipmipower/src/ipmipower_packet.c
	(ipmipower_packet_cmd_template): modified return type accordingly.

	* libfreeipmi/src/ipmi-debug.c (fiid_obj_dump_perror): fixed
	typecast warnings.

	* doc/freeipmi.texi: Added "Auth_Type_None conflict" section to
	bmc-config known issues.

2004-10-14  Ian Zimmerman  <itz@californiadigital.com>

	* configure.ac, bmc-watchdog/Makefile.am, fish/Makefile.am,
	ipmiping/Makefile.am, ipmipower/Makefile.am, rmcpping/Makefile.am,