@@ -13,4 +13,4 @@ noinst_HEADERS = xmalloc.h
 # These are headers visible as <freeipmi/freeipmi.h>
 modincludedir = $(includedir)/freeipmi
 
-modinclude_HEADERS = freeipmi.h fiid.h smbios.h bit-ops.h ipmi-cmd-spec.h ipmi-netfn-spec.h ipmi-semaphores.h ipmi-ipmb-interface.h ipmi-lan-interface.h ipmi-kcs-interface.h ipmi-smic-interface.h rmcp.h ipmi-sessions.h ipmi-utils.h ipmi-error.h ipmi-msg-support-cmds.h ipmi-chassis-cmds.h ipmi-dev-global-cmds.h ipmi-sdr-record-types.h ipmi-sdr-repo-cmds.h ipmi-sensor-types.h ipmi-sensor-cmds.h ipmi-sel-record-types.h ipmi-sel-cmds.h ipmi-lan-param-spec.h ipmi-lan-cmds.h ipmi-sol-cmds.h ipmi-md2.h ipmi-md5.h ipmi-serial-modem-param-spec.h ipmi-serial-cmds.h ipmi-sdr-repo-cache.h ipmi-sensor-utils.h ipmi-debug.h ipmi-watchdog.h ipmi-probe.h pcilocate.h ipmi-msg-interface-desc.h ipmi-ping.h ipmi-pef-cmds.h
+modinclude_HEADERS = freeipmi.h fiid.h smbios.h bit-ops.h ipmi-cmd-spec.h ipmi-netfn-spec.h ipmi-semaphores.h ipmi-ipmb-interface.h ipmi-lan-interface.h ipmi-kcs-interface.h ipmi-smic-interface.h rmcp.h ipmi-sessions.h ipmi-utils.h ipmi-error.h ipmi-msg-support-cmds.h ipmi-chassis-cmds.h ipmi-dev-global-cmds.h ipmi-sdr-record-types.h ipmi-sdr-repo-cmds.h ipmi-sensor-types.h ipmi-sensor-cmds.h ipmi-sel-record-types.h ipmi-sel-cmds.h ipmi-lan-param-spec.h ipmi-lan-cmds.h ipmi-sol-cmds.h ipmi-md2.h ipmi-md5.h ipmi-serial-modem-param-spec.h ipmi-serial-cmds.h ipmi-sdr-repo-cache.h ipmi-sensor-utils.h ipmi-debug.h ipmi-watchdog.h ipmi-probe.h pcilocate.h ipmi-msg-interface-desc.h ipmi-ping.h ipmi-pef-cmds.h ipmi-pef-param-spec.h
