@@ -1,0 +1,37 @@
+/* Copyright (C) 2003 - 2004 FreeIPMI Core Team */
+
+/* This file is free software; you can redistribute it and/or modify */
+/* it under the terms of the GNU General Public License as published by */
+/* the Free Software Foundation; either version 2, or (at your option) */
+/* any later version. */
+
+/* This file is distributed in the hope that it will be useful, */
+/* but WITHOUT ANY WARRANTY; without even the implied warranty of */
+/* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the */
+/* GNU General Public License for more details. */
+
+/* You should have received a copy of the GNU General Public License */
+/* along with GNU Emacs; see the file COPYING.  If not, write to */
+/* the Free Software Foundation, Inc., 59 Temple Place - Suite 330, */
+/* Boston, MA 02111-1307, USA. */
+
+/* $Id: ipmi-pef-param-spec.h,v 1.1 2004-10-26 23:14:17 itz Exp $ */
+
+#ifndef IPMI_PEF_PARAM_SPEC_H_INCLUDED
+#define IPMI_PEF_PARAM_SPEC_H_INCLUDED
+
+#define IPMI_PEF_PARAM_PEF_CONTROL			1
+#define IPMI_PEF_PARAM_ACTION_GLOBAL_CONTROL            2
+#define IPMI_PEF_PARAM_STARTUP_DELAY                    3
+#define IPMI_PEF_PARAM_ALERT_STARTUP_DELAY              4
+#define IPMI_PEF_PARAM_NUM_EVENT_FILTERS                5
+#define IPMI_PEF_PARAM_EVENT_FILTER_TABLE               6
+#define IPMI_PEF_PARAM_EVENT_FILTER_TABLE_DATA_1        7
+#define IPMI_PEF_PARAM_NUM_ALERT_POLICY_ENTRIES         8
+#define IPMI_PEF_PARAM_ALERT_POLICY_TABLE               9
+#define IPMI_PEF_PARAM_SYSTEM_GUID                      10
+#define IPMI_PEF_PARAM_NUM_ALERT_STRINGS                11
+#define IPMI_PEF_PARAM_ALERT_STRING_KEYS                12
+#define IPMI_PEF_PARAM_ALERT_STRINGS                    13
+
+#endif
